refactor: move camofox tab media routes
